2010-05-30  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13722: Typoscript Object Path gets lost when using Hook for eTypesExtraFormFields TypoScriptObject 
	* Fixed issue: #14226: Mapping TS always makes it HSC=1 // Review eType preset behaviour 
	* Fixed issue: #13950: Page TOs with static DSs show up in all sites and do not honor GRSP

2010-05-18  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14346: External URL with no urltype not shown up (Thanks to Benjamin Mack)
	* Fixed issue: #13079: Followup: Hooks to reprocess lKey and vKey.

2010-05-02  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14253: Disable drag&drop feature on a per-user and a per-pagebranch basis 
	* Fixed issue: #12204: Missing clause in XHTML conditional comments like <!--[if lte IE 6]> 

2010-04-29  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14213: "To Top" checkbox is missing in FlexContent (Thanks to Patrick Gaumond)
	* Fixed issue: #11842: mapping type RANGE not available when tag has both id and class attribute (Thanks to Jigal van Hemert)

2010-04-25  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14162: Feature(tte): Make current field's name available as register (Thanks to Francois Suter)
	* Fixed issue: #14056: static ds wizard error-handling improvement if conf is missing
	* Fixed issue: #13936: noEditOnCreation don't work with static DS
	* Fixed issue: #12950: Add an option to tt_content , for disabling drag/drop

2010-04-20  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13975: hasElementForeignReferences might cause maximum execution time error

2010-04-17  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14141: Drag&Drop should scroll automatically 
	* Fixed issue: #14136: JavaScript Problem - Drag and Drop  (Thanks to Frank Hirsch)

2010-04-13  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14083: global variable 'fileadminDir' not replaced by its value in help text under new site wizard
